PixelFantasy/sass/index.sass
@import _reset
@import _extend

*
    padding: 0
    margin: 0
    list-style: none
    box-sizing: border-box
    text-decoration-line: none
    // color: gray
    font-family: monospace !important
    transition: all 0.2s ease
    &:hover
        transition: all 0.2s ease
                
html, body, .container
    height: 100%
    font-size: 1rem

body
    position: absolute
    right: 0px
    width: 100%
    background-color: #ffffff
    
.offset-260
    // position: absolute
    right: 260px !important

.container
    max-width: 1790px
    margin: 0 auto
    padding-top: 40px

@media (max-width: 768px)
    .container
        padding-top: 0px

/* Hide scrollbar for IE, Edge and Firefox */
.containerScrollHidden
    -ms-overflow-style: none  // IE and Edge
    scrollbar-width: none  // Firefox

/* Hide scrollbar for Chrome, Safari and Opera */
.containerScrollHidden::-webkit-scrollbar
    display: none

@import _nav
                
.headline     
    font-size: 1.6em        
    text-align: left
    border-bottom: 1px solid rgba(0, 0, 0, 0.2)
    margin-bottom: 25px
    height: 57px
    line-height: 57px

.newsInfo_Table
    color: rgba(0, 0, 0, 0.5)
    font-size: 16px
    font-weight: 100
    // white-space: nowrap
    // overflow: hidden
    // width: -webkit-fill-available
    // text-overflow: ellipsis
    // display: inline-block
    tr
        &:hover
            color: rgba(0, 0, 0, 1)
        &:nth-child(1)
            td:nth-child(1)
                color: #008B8B

#newsMore_Line
    .more
        color: rgba(0, 0, 0, 0.5)
        font-size: 16px
        font-weight: 100
        &:hover
            color: red

[id$='Work']
    display: flex
    flex-wrap: wrap
    justify-content: space-evenly

.pixelart_Thumbnail
    cursor: pointer
    position: relative
    margin: 10px
    float: left
    width: 200px
    height: 200px
    // image-rendering: pixelated
    border: 1px solid #cccccc
    padding: 2px
    box-shadow: 0 0 4px -2px
    overflow: hidden
    img
        width: 100% !important
        height: auto !important
        transform: scale(4.0) translateZ(0)
        -webkit-transform: scale(4.0) translateZ(0)
        position: absolute
        top: 135%
        left: 5%
    &:hover img
        transform: scale(5) translateZ(0)
        -webkit-transform: scale(5) translateZ(0)
        top: 180%

.filling-empty-space-childs
    width:200px //*the width of the images in this example*/
    height:0 //*Important! for the divs to collapse should they fall in a new row*/
    margin: 0 10px
    padding: 0 2px

#animalWork .pixelart_Thumbnail img, #vehicleWork .pixelart_Thumbnail img
    transform: none
    -webkit-transform: none
    position: initial
    top: 0px
    left: 0px
    image-rendering: pixelated

#showBox
    display: none
    position: fixed
    top: 0px
    left: 0px
    width: 100%
    height: 100%   
    .showBoxBackGround
        // display: none
        position: fixed
        top: 0px
        left: 0px
        width: 100%
        height: 100%
        background-color: rgba(0,0,0,0.8)
        // overflow: auto
    .showBoxContainer
        text-align: center
        position: absolute
        width: 100%
        height: 100%
        left: 0
        top: 0
        padding: 0 8px
        box-sizing: border-box
        overflow: auto 
        .showBoxClose
            cursor: pointer
            position: absolute
            top: 10px
            left: 10px
            font-size: 35px
            width: 50px
            height: 50px
            text-align: center
            line-height: 50px
            color: #fff
            z-index: 1
        .showBoxCover            
            position: relative
            width: calc(450px*2)
            height: calc(450px*2)
            margin: 100px auto
            
            .showBoxTitleWrap
                position: absolute
                width: inherit
                height: inherit
                .showBoxTitleBox
                    position: absolute
                    width: inherit
                    height: inherit
                    overflow: hidden
                    top: -20px
                    right: -20px
                    &::before, &::after
                        position: absolute
                        content: ''
                        display: block
                        border: 10px solid rgba(0,139,139,0.5)
                        // z-index: -1
                    &::before                
                        top: 0
                        right: 185px
                        transform: translateX(-30%)
                    &::after
                        top: 185px
                        right: 0
                        transform: translateY(30%)
                    .showBoxTitle
                            width: 300px
                            padding: 30px
                            background-color: rgba(0,139,139,1)
                            text-align: center
                            color: #fff
                            transform: rotate(45deg)
                            position: absolute
                            top: 40px
                            right: -70px

            // &::after
            //     position: absolute
            //     content: ''
            //     width: inherit
            //     height: inherit
            //     top: 0
            //     left: 0
            //     box-shadow: 0 0 50px 30px rgba(0,0,0,0.6) inset
            img
                width: inherit
                height: inherit
                margin: 0 auto
                display: block
                image-rendering: pixelated
                outline: 5px solid #008b8b
            .showBoxInfo
                position: absolute
                bottom: 0
                text-align: left
                padding: 5px
                color: rgba(255, 255, 255, 1)
                background-color: rgba(0, 0, 0, 0.5)

@media (max-width: 768px)
    #showBox
        .showBoxContainer
            .showBoxCover
                width: 100%
                height: 100%
                margin: 0
                display: flex
                flex-direction: column
                justify-content: center
                .showBoxTitleWrap
                    position: static
                    height: auto
                    .showBoxTitleBox
                        position: static
                        &::before, &::after
                            display: none
                        .showBoxTitle
                            width: auto
                            padding: 10px
                            transform: none
                            position: static
                .showBoxInfo
                    position: static
                    text-align: center
                img
                    width: 100%
                    height: auto
                    outline: none

.showBoxPreloader
    display: block
    width: 30px !important
    height: 30px
    margin: 0 auto
    animation: rotate3d 3s infinite ease-in-out
    background-color: #cccccc
    color: #cccccc
    position: absolute
    top: 50%
    left: 8px
    right: 8px
    text-align: center
    margin-top: -0.8em
    z-index: 1044

.d-block
    display: block !important

.d-none
    display: none !important

.content
    float: left
    height: auto
    width: 75%
    font-weight: bold
    padding: 0 10px
    margin-bottom: 25px
    // background-color: rgba(0,0,0,0.3)    
    +clearfix

@media (max-width: 768px)
    .content
        width: 100%

.me
    display: inline-block    
    width: 100%
    height: 100%        
    font-size: 16px
    // font-weight: 100
    section
        width: 50%
        height: 215px
        float: left
        padding: 0 50px
        p
            color: rgba(0, 0, 0, 0.5)
            font-size: 0.9rem
            // font-size: 14px
            padding: 5px
            a
                color: inherit
                &:hover
                    color: #008B8B
    .section-left
        text-align: center        
        border-right: 1px dashed rgba(0,0,0,0.2)
        padding: 0px
        width: 30%
        .image
            text-align: center
            img
                box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5)
        .nickname
            color: #000
            font-size: 18px
            font-weight: bold
    .section-right
        display: flex
        align-items: center
        width: 70%
        .description
            padding: 15px
            // font-weight: bold
@media (max-width: 768px)
    .me
        font-size: 1.5rem
        .section-left,.section-right
            width: 100%
            height: auto
        .section-left
            border-right: none
            border-bottom: 2px dashed rgba(0,0,0,0.2)

.contactForm input, .contactForm textarea
    padding: 5px

@media (max-width: 768px)
    .contactForm input, .contactForm textarea
        width: 100%

.contactForm textarea[name="body"]
    resize: vertical

.contactForm input[type="submit"]
    background-color: #A76F7A
    color: #fff
    padding: 5px

.required, .formTip, .return
    color: red

.sending
    display: block
    width: 60px !important
    height: 30px
    margin: 0 auto
    animation: rotate3d 3s infinite ease-in-out
    background-color: #cccccc
    color: #cccccc
    border: 30px solid transparent
    border-top-color: red
    border-bottom: 10px solid transparent
    text-align: center
    margin-top: -0.8em
    z-index: 1044

.sendStatus
    width: auto
    height: 272px
    text-align: center
    font-size: 20px
    color: orange
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    .msg
        padding: 20px
    .return
        display: none

.loading
    min-height: 145px
    display: flex
    align-items: center
    justify-content: center

.loading > span
    display: block
    margin: 0 auto
    width: 40px 
    height: 40px    
    // background-color: #cccccc
    // color: #cccccc
    border: 5px solid black
    // text-align: center
    z-index: 1044
    animation: rotateplane 2.3s infinite ease

.loading > span::before
    content: ''
    vertical-align: top
    display: inline-block
    width: 100%
    height: 100%
    background-color: black
    animation: loading 2.3s infinite ease-in

.footer
    float: left
    width: 100%
    text-align: center
    color: #A76F7A
    font-size: 0.8em
    padding: 5px
    border-top: 1px dashed rgba(0,0,0,0.1)          
    
@keyframes rotate3d
    0% 
        transform: perspective(120px) rotateX(0deg) rotateY(0deg) translateZ(0)
    20%
        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) translateZ(0)
    40%
        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg) translateZ(0)
    60%
        transform: perspective(120px) rotateX(-360.1deg) rotateY(-180deg) translateZ(0)
    80%
        transform: perspective(120px) rotateX(-360deg) rotateY(0deg) translateZ(0)
    100%
        transform: perspective(120px) rotateX(-360deg) rotateY(0deg) translateZ(0)

@keyframes rotateplane
    0% 
        transform: rotate(0deg)
    25%
        transform: rotate(180deg)
    50%
        transform: rotate(180deg)
    75%
        transform: rotate(360deg)
    100%
        transform: rotate(360deg)

@keyframes loading
    0% 
        height: 0%
    25%
        height: 0%
    50%
        height: 100%
    75%
        height: 100%
    100%
        height: 0%


@import _rwd

